@@ -8,7 +8,7 @@ Description: The package simulates and plots quantities of interest (relative
     Proportional Hazard models. It also simulates and plots marginal effects
     for multiplicative interactions.
 Version: 1.1.2
-Date: 2014-04-01
+Date: 2014-04-03
 Author: Christopher Gandrud
 Maintainer: Christopher Gandrud <christopher.gandrud@gmail.com>
 URL: http://christophergandrud.github.io/simPH/
