@@ -7,32 +7,53 @@
 #' @param SubVar character vector the variable names to subset the simulations 
 #' by.
 #' @param qi character vector naming the type of quantity of interest.
-#' @param QI character string labeling the quantity of interest values.
 #' @param spin logical for whether or not to use the shortest probability 
 #' interval or the central interval.
 #' @param ci numeric confidence interval measure.
+#' @param extremesDrop logical whether or not to drop simulated quantity of interest values that are \code{Inf}, \code{NA}, \code{NaN} and \eqn{> 1000000}. These values are difficult to plot \code{\link{simPH}} and may prevent \code{spin} from finding the central interval.
 #' 
 #' @importFrom plyr ddply
 #' @keywords internals
 #' @noRd
 
-IntervalConstrict <- function(Simb = Simb, SubVar = SubVar, qi = qi, QI = QI, 
-                              spin = FALSE, ci = 0.95)
+IntervalConstrict <- function(Simb = Simb, SubVar = SubVar, qi = qi,
+                              spin = FALSE, ci = 0.95, 
+                              extremesDrop = extremesDrop)
 {
 	if (qi == "Hazard Rate" & isTRUE(spin)){
-		message("spin currently unsupported for Hazard Rates. The central interval will be found instead.")
+		message(paste("spin currently unsupported for Hazard Rates.",
+                      "\nThe central interval will be found instead."))
 		spin <- FALSE
 	}
+    if (isTRUE(extremesDrop)){
+        SimbNoExt <- Simb[!is.infinite(Simb$QI), ]
+        SimbNoExt <- SimbNoExt[!is.na(SimbNoExt$QI), ]
+        SimbNoExt <- SimbNoExt[!is.nan(SimbNoExt$QI), ]
+        SimbNoExt <- SimbNoExt[SimbNoExt$QI <= 1000000, ]
+
+        # Messages informing the user of dropped infinite values (if any)
+        extDropped <- nrow(Simb) - nrow(SimbNoExt)
+        extDroppedPerc <- round((extDropped/nrow(Simb) * 100), digits = 1) 
+        if (extDropped > 0){ 
+            message(paste0(extDropped, ' (', extDroppedPerc, '%)',
+                   ' simulations dropped for having', 
+                   '\nquantity of interest values: Inf/NA/NaN/>1000000.\n',
+                   '\nTo keep extreme values set extremesDrop = FALSE.\n'))
+        }
+        Simb <- SimbNoExt
+    }
     if (Inf %in% Simb$QI){
         if (isTRUE(spin)){
             stop("spin cannot be TRUE when there are infinite values for your quantity of interest.",
                 call. = FALSE)
         } else {
-            message("Warning infinite values calculated for your quantity of interest. Consider changing the difference between Xj and Xl.")
+            message(paste("Warning infinite values calculated for your quantity of interest.", 
+                "\nConsider changing the difference between Xj and Xl."))
         }
     }
     if (any(Simb$QI > 800) & isTRUE(spin)){
-    	message("Warning large quantity of interest values estimated. SPIn may not be found. If so, try spin = FALSE.")
+    	message(paste("Warning large quantity of interest values estimated.",
+            "\nSPIn may not be found. If so, try spin = FALSE."))
     }
 
 	Lower <- Upper <- NULL
