@@ -1,5 +1,9 @@
 ## Version 1.1.2
 
+`extremesDrop` argument added to `coxsim` functions. This drops simulated 
+quantity of interest values that are Inf/NA/NaN/>1000000. These can create
+problems with plotting and finding the `spin`.
+
 Small utility `setXl` created that makes it easier to set `Xl` values.
 
 Automatic bspline cleaning features added for `coxsimSpline`.
